--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: home
 <div id = "home-content">
 
   <div id = "profile"></div>
-  <h1>Hardik Chauhan</h1>
+  <h1>Sivakumar Vunnam/h1>
   <hr>
-  <h3>DEEP LEARNING ENTHUSIAST</h3>
+  <h3>Staff DevOps Engineer</h3>
 
   <div id = "profile-links">
     <a class = "home-links" href = "{{ site.data.params.archive_url }}">BLOG</a>
