--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 <div id = "home-content">
 
   <div id = "profile"></div>
-  <h1>Sivakumar Vunnam/h1>
+  <h1>Sivakumar Vunnam</h1>
   <hr>
   <h3>Staff DevOps Engineer</h3>
 
