--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
   <div id = "profile"></div>
   <h1>Sivakumar Vunnam</h1>
   <hr>
-  <h3>Staff DevOps Engineer</h3>
+  <h3>STAFF DEVOPS ENGINEER</h3>
 
   <div id = "profile-links">
     <a class = "home-links" href = "{{ site.data.params.archive_url }}">BLOG</a>
