--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
     <h1>About</h1>
   </header>
   <div id = "profile"></div>
-  <p>
+  <p style="text-align:justify;">
    I am Sivakumar Vunnam, A Successful DevOps Engineer with Over 5 years of professional Experience dedicated to DevOps automation, AWS (cost optimization, governance) tool consolidation. supporting on-premises and cloud infrastructure (AWS, Azure) with a strong background on DevOps tools to deploy web applications, middleware, and databases. favoring the following technologies and languages: Ubuntu, Centos, Jenkins, AWS, Docker, Kubernetes, EFK, Splunk, New Relic, Bash, YAML, JSON, Shell Scripting, Python, SaltStack, Ansible, Puppet, Chef, Packer, Vagrant, SonarQube, Jfrog,Nexus, Prometheus, Grafana
   </p>
  
