--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: home
   <h1>Sivakumar Vunnam</h1>
   <hr>
   <h3>STAFF DEVOPS ENGINEER</h3>
-  
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
   <div id = "profile-links">
     <a class = "home-links" href = "{{ site.data.params.archive_url }}">BLOG</a>
     <a class = "home-links" href = "{{ site.data.params.about_url }}">ABOUT</a>
