--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ title: Projects
               {% if project.github.user %}
                 <a class="github-button" href="https://github.com/{{ project.github.user }}/{{ project.github.repo }}" data-size="large" data-show-count="true" data-icon="octicon-star" aria-label="Star {{ project.github.user }}/{{ project.github.repo }} on GitHub">Star</a>
               {% else %}
-                <a class="github-button" href="https://github.com/hardik2396/{{ project.github.repo }}" data-size="large" data-show-count="true" data-icon="octicon-star" aria-label="Star dhavalkapil/{{ project.github.repo }} on GitHub">Star</a>
+                <a class="github-button" href="https://github.com/sivakumarvunnam/{{ project.github.repo }}" data-size="large" data-show-count="true" data-icon="octicon-star" aria-label="Star sivakumarvunnam/{{ project.github.repo }} on GitHub">Star</a>
               {% endif %}
             {% endif %}
           </span>
