--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
----
+i---
 layout: default
 title: About
 ---
@@ -9,7 +9,7 @@ title: About
   </header>
   <div id = "profile"></div>
   <p style="text-align:justify;">
-   I am Sivakumar Vunnam, A Successful DevOps Engineer with Over 5 years of professional Experience dedicated to DevOps automation, AWS (cost optimization, governance) tool consolidation. supporting on-premises and cloud infrastructure (AWS, Azure) with a strong background on DevOps tools to deploy web applications, middleware, and databases. favoring the following technologies and languages: Ubuntu, Centos, Jenkins, AWS, Docker, Kubernetes, EFK, Splunk, New Relic, Bash, YAML, JSON, Shell Scripting, Python, SaltStack, Ansible, Puppet, Chef, Packer, Vagrant, SonarQube, Jfrog,Nexus, Prometheus, Grafana
-  </p>
+ My Self Sivakumar Vunnam, A Successful DevOps Engineer with Over 5 years of professional Experience dedicated to Cloud and DevOps automation. I enjoy Designing, Implementing, and Supporting applications in the AWS cloud infrastructure. I’m driven and committed to providing solutions that satisfy engineering needs. I’m a highly motivated, productive team player looking to lead by example. Enthusiastic about exploring new services in the DevOps area. My greatest strength is my ability to thoroughly research a requirement and design a solution that is cost-effective, resilient, fault-tolerant, and highly available. Using my cloud expertise, have greatly contributed to multiple successful migrations to AWS from on-premise infrastructure.
+Expertise: Deploy highly available and fault-tolerant applications in AWS, Cloud Computing, Virtualization, DevOps, CI/CD, Build & Release Management(GIT, Jenkins, Maven, Protector, SonarQube, JFrog), Container Orchestration(Docker, Kubernetes), Configuration Management(Salt Stack, Ansible), Packer, Vagrant, Linux Administration (CentOS, RHEL, Ubuntu), Microsoft Windows 2008/2012/2016, Shell scripting (Bash), Python, Monitoring (New Relic, Grafana, Prometheus), Logging (Splunk, EFK), Databases (Amazon MySQL, MongoDB, DynamoDB, Amazon Postgres).</p>
  
 </div>
