--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: home
     <a class = "home-links" href = "{{ site.data.params.archive_url }}">BLOG</a>
     <a class = "home-links" href = "{{ site.data.params.about_url }}">ABOUT</a>
     <a class = "home-links" href = "{{ site.data.params.projects_url }}">PROJECTS</a>
+    <a class = "home-links" href = "{{ site.data.params.experience_url }}">EXPERIENCE</a>
     <a class = "home-links" href = "{{ site.data.params.resume_url }}">RESUME</a>
   </div>
 
