--- a/experiences.html
+++ b/experiences.html
@@ -8,7 +8,7 @@ title: Experience
     <h1>Experiences</h1>
   </header>
   <p style="text-align:justify;">
-  To see a complete list of my experiences, see my <a href="{{ site.data.params.resume_url }}">CV</a>. Below, is a list of some of my selected experiences.
+  Successful DevOps Engineer with Over 5 years of professional Experience dedicated to Cloud, DevOps automation and Cloud Infra structure (cost optimization, governance). I enjoy Designing, Implementing, and Supporting applications in the AWS, GCP cloud infrastructure. I’m a highly motivated, productive team player looking to lead by example. Enthusiastic about exploring new services in the DevOps area. My greatest strength is my ability to thoroughly research a requirement and design a solution that is cost‑effective, resilient, fault‑tolerant, and highly available. Using my cloud expertise, I have greatly contributed to multiple successful migrations to AWS from on‑premise infrastructure
   </p>
 
   <div class="Experiences">
