highest necessary point's

--- a/experiences.html
+++ b/experiences.html
@@ -17,9 +17,7 @@ title: Experience
         <div class="experience-name">
           <a href = "{{ experience.url }}">{{ experience.name }}</a>
           <span class="star-button">
-            <p style="text-align:justify;">
-              Mar 21 - Jul 21
-              </p>
+              <b>Mar-Jul 21</b>
           </span>
         </div>
         <ul class="experience-description">
