highest necessary point's

--- a/experiences.html
+++ b/experiences.html
@@ -17,7 +17,7 @@ title: Experience
         <div class="experience-name">
           <a href = "{{ experience.url }}">{{ experience.name }}</a>
           <span class="star-button">
-              <b>Mar-Jul 21</b>
+              <span>Date</span>: {{ experience.date }}
           </span>
         </div>
         <ul class="experience-description">
