--- a/experiences.html
+++ b/experiences.html
@@ -8,7 +8,7 @@ title: Experience
     <h1>Experiences</h1>
   </header>
   <p style="text-align:justify;">
-  Successful DevOps Engineer with Over 6 years of professional Experience dedicated to Cloud, DevOps automation and Cloud Infra structure (cost optimization, governance). I enjoy Designing, Implementing, and Supporting applications in the AWS, GCP cloud infrastructure. I’m a highly motivated, productive team player looking to lead by example. Enthusiastic about exploring new services in the DevOps area. My greatest strength is my ability to thoroughly research a requirement and design a solution that is cost‑effective, resilient, fault‑tolerant, and highly available. Using my cloud expertise, I have greatly contributed to multiple successful migrations to AWS from on‑premise infrastructure
+  Successful DevOps Engineer with Over 7 years of professional Experience dedicated to Cloud, DevOps automation and Cloud Infrastructure as code focused on (cost optimization, cloud governance). I enjoy Designing, Implementing, and Supporting applications in the AWS, GCP, Azure cloud infrastructure. I’m a highly motivated, productive team player looking to lead by example. Enthusiastic about exploring new services in the DevOps and MLOps area. My greatest strength is my ability to thoroughly research a requirement and design a solution that is cost‑effective, resilient, fault‑tolerant, and highly available. Using my cloud expertise, I have greatly contributed to multiple successful migrations to AWS from on ‑premise infrastructure.
   </p>
 
   <div class="Experiences">
